--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 </head>
 
 <body>
-
+    <div id="output">
+    </div>
+    <script src="./node_modules/moment/min/moment.min.js"></script>
+    <script src="./assets/js/main.js"></script>
 </body>
 
 </html>
