--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <div class="wrap">
-        <h1>Coming Soon</h1>
+        <h1>Coming Soon...</h1>
         <div id="output">
         </div>
     </div>
