--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+    <div id="overlay"></div>
     <div class="wrap">
         <h1>Coming Soon...</h1>
         <div id="output">
