html structure header-main-footer

--- a/index.html
+++ b/index.html
@@ -12,9 +12,12 @@
 <body>
     <div id="overlay"></div>
     <div class="wrap">
-        <h1>Coming Soon...</h1>
-        <div id="output">
-        </div>
+        <header>
+            <h1>Coming Soon...</h1>
+        </header>
+        <main id="output">
+        </main>
+        <footer></footer>
     </div>
     <script src="./node_modules/moment/min/moment.min.js"></script>
     <script src="./assets/js/main.js"></script>
