footer with styling

--- a/index.html
+++ b/index.html
@@ -17,7 +17,17 @@
         </header>
         <main id="output">
         </main>
-        <footer></footer>
+        <footer>
+            <div class="copyright">
+                Atar David web development
+            </div>
+            <nav class="footer-nav">
+                <ul>
+                    <li>Legal notice</li>
+                    <li>Privacy notice</li>
+                </ul>
+            </nav>
+        </footer>
     </div>
     <script src="./node_modules/moment/min/moment.min.js"></script>
     <script src="./assets/js/main.js"></script>
