initial output pattern in main

--- a/index.html
+++ b/index.html
@@ -16,6 +16,22 @@
             <h1>Coming Soon...</h1>
         </header>
         <main id="output">
+            <div class="timeOutput">
+                <span>Days</span>
+                <div id="days"></div>
+            </div>
+            <div class="timeOutput">
+                <span>Hours</span>
+                <div id="hours"></div>
+            </div>
+            <div class="timeOutput">
+                <span>Minutes</span>
+                <div id="minutes"></div>
+            </div>
+            <div class="timeOutput">
+                <span>Seconds</span>
+                <div id="seconds"></div>
+            </div>
         </main>
         <footer>
             <div class="copyright">
@@ -24,7 +40,7 @@
             <nav class="footer-nav">
                 <ul>
                     <li>Legal notice</li>
-                    <li>Privacy notice</li>
+                    <li>Privacy policy</li>
                 </ul>
             </nav>
         </footer>
