output initial status

--- a/index.html
+++ b/index.html
@@ -16,21 +16,21 @@
             <h1>Coming Soon...</h1>
         </header>
         <main id="output">
-            <div class="timeOutput">
+            <div class="timeOutput initBlank">
                 <span>Days</span>
-                <div id="days"></div>
+                <div id="blank">0</div>
             </div>
-            <div class="timeOutput">
+            <div class="timeOutput initBlank">
                 <span>Hours</span>
-                <div id="hours"></div>
+                <div id="blank">0</div>
             </div>
-            <div class="timeOutput">
+            <div class="timeOutput initBlank">
                 <span>Minutes</span>
-                <div id="minutes"></div>
+                <div id="blank">0</div>
             </div>
-            <div class="timeOutput">
+            <div class="timeOutput initBlank">
                 <span>Seconds</span>
-                <div id="seconds"></div>
+                <div id="blank">0</div>
             </div>
         </main>
         <footer>
